# rir

./: .gitignore  Cargo.toml  LICENSE  README.md
sample_corpus/romeo_juliet/: 5.txt  binary_file
sample_corpus/sanguo/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
sample_corpus/wiki_lines/: .rircfg  lines1  lines2
sample_corpus/wiki_zh/: .rircfg  wiki_1  wiki_2
samples/a/: 2.txt
src/: ircore.rs  main.rs
src/ircore/: analyzer.rs  common.rs  dictionary.rs  document.rs  engine.rs  index.rs  mod.rs  query.rs  search.rs  sparse_vector.rs  tokenizer.rs
src/ircore/doc/: cfg.rs  dir.rs  doc_parser.rs  json.rs  jsonlines.rs  mod.rs  text.rs
src/ircore/index/: engine.rs  mod.rs  pl.rs
src/ircore/query/: mod.rs
src/ircore/ranking/: bm25.rs  lmd.rs  mod.rs  ps.rs  vsm.rs
src/ircore/token/: analyzer.rs  dictionary.rs  mod.rs  sgmt.rs
src/ircore/utils/: binary_search.rs  mod.rs  serialize.rs  sparse_vector.rs
