[package]
name = "rir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.9.0"
clap = {version = "3.2.16", features = ["derive"]}
bincode = "1.3.3"
serde = {version = "1.0", features = ["derive"]}
encoding_rs = "0.8.31"
encoding_rs_io = "0.1.7"
jieba-rs = "0.6.6"
whatlang = "0.16.0"
