[package]
name = "rir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4", features = ["derive"]}
log = "0.4"
env_logger = "0.9"

once_cell = "1.14"

# tokenizer segmentation
unicode-segmentation = "1.9"
jieba-rs = "0.6"
whatlang = "0.16"

# seralization
serde = {version = "1", features = ["derive"]}
bincode = "1.3"
serde_json = "1.0"
serde_yaml = "0.9"
flate2 = "1.0"
